--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-TOKEN=MTQ0ODE4MjUzNDQ5MTA3ODY4Nw.GYgT5F.9RiJkB2VUnNX7q6VR3C3ng5ft9_XLOw5L_Hn8s
+TOKEN=MTQ0ODE4MjUzNDQ5MTA3ODY4Nw.G4G_D9.qsAUWeDt0wm0yh0anOuFrMFsMvnRqc9bg9ytdY
